app/assets/css/style.css
/* ... */
.categories-item-text{
    width: 100%;
}
.categories-item .button-table.edit, .categories-item .button-table.remove {
    position: absolute;
    left: 100%;
    bottom: 0;
}
.categories-block .margin-helper{
    width: 100%;
    padding: 2.2em;
    padding-right: 0.8em;
}
.categories-block .more {
    padding-left: 2.2em;
}
.profile.full{
    width: 100%;
}
.flex.flex-end{
    justify-content: flex-end;
}
.pad2{
    padding: 8px 2em;
    margin-top: 3px;
}
table.sm{
    font-size: 0.85em;
}
table.sm .button-table {
    border-radius: 5px;
    width: 2em;
    height: 2em;
}
table.sm  .button-table.remove {
    background-size: 0.8em;
}
.td_link{
    color: #477baa;
}
.td_link:hover{
    color: #1b8442;
}

.cart-item{
    width: 58%;
    font-size: 0.9em;
}
.cart-item.left{
    width: 39%;
}
.cart-img, .cart-text{
    width: 100%;
}
.cart-img img{
    width: 100%;
}
p.name{
    font-size: 1.6em;
    padding-bottom: 0.6em;
    border-bottom: 1px solid #e8e8e8;
}
.cart-inside{
    margin: 1.2em 0;
}
.cart-inside span{
    color: #4e4e4e;
    font-family: cbold;
    width: 35%;
}
.cart-inside p{
    width: 63%;
}
.flex.select select{
    width: 49%;
}
.flex.select input{
    width: 49%;
}
.align-end{
    align-items: flex-end;
}
.check{
    display: inline-block;
    width: 1.3em!important;
    height: 1.3em!important;
    background: transparent;
    cursor: pointer;
    vertical-align: middle;
    margin: 0!important;
    margin-left: 4px;
    padding: 0!important;
}
.select-label.sm{
    padding: 0.25em 1em;
    margin-left: 0;
    display: block;
    margin-top: 7px;
    text-transform: uppercase;
    font-size: 0.85em;
}
span.bold{
    font-family: cbold;
}
.flex.red{
    margin-top: 3em;
}
.text {
    word-wrap: break-word;
}
.text-center{
    text-align: center;
}
.notifications-box{
    position: absolute;
    top: 105%;
    right: 0;
    width: 25em;
    background-color: white;
    -webkit-box-shadow: -1px 1px 5px 0px rgba(148,148,148,1);
    -moz-box-shadow: -1px 1px 5px 0px rgba(148,148,148,1);
    box-shadow: -1px 1px 5px 0px rgba(148,148,148,1);
    /* display: none; */
    z-index: 100;
}
.notifications-box ul li{
    padding: 0.7em;
}
.notifications-box ul li a{
    display: inline-block;
    width: 100%;
    height: 100%;
    padding: 0.7em;
    transition: 0.2s;
}
ul.notifications-menu li{
    padding: 0;
}
.notifications-box ul li a:hover{
    background-color: #e5e5e5;
}
li.bold{
    font-family: cbold;
    border-bottom: 1px solid #999999;
    font-size: 1.1em;
}
.animated{animation-duration:1s;animation-fill-mode:both;}
@keyframes fadeInRight{from{opacity:0;transform:translate3d(50%, 0, 0);}
    to{opacity:1;transform:none;}
}
.fadeInRight{animation-name:fadeInRight;}
@keyframes fadeInRightBig{from{opacity:0;transform:translate3d(2000px, 0, 0);}
    to{opacity:1;transform:none;}
}
@keyframes fadeOutRight{from{opacity:1;}
    to{opacity:0;transform:translate3d(100%, 0, 0);}
}
.fadeOutRight{animation-name:fadeOutRight;}
@keyframes fadeOutRightBig{from{opacity:1;}
    to{opacity:0;transform:translate3d(2000px, 0, 0);}
}
.sm.inline{
    padding: 0.5em 1em;
    margin-top: 0.8em;
    width: 13em;
}
/* .profile_list{
    display: none;
}
.profile_list.active{
    display: block;
} */
.small-padding{
    padding: 1.3em 0.8em;
}
.small-padding .list img {
    margin-right: 0.5em;
}
.small-padding .list li a {
   font-size: 0.85em;
}
input, textarea, select, select option, button{
    font-family: cen;
}
span.date{
    margin-left: 2em;
}
.send {
    margin: 0.6em 0;
    font-size: 0.85em;
    padding-right: 1.5em;
    padding-left: 1.5em;
}
.send img{
    margin: 0;
    margin-left: 0.5em;
}
.form-item-big{
    width: 49.2%;
}
.form-item-small{
    width: 49.2%;
}
.form-item-small-box{
    margin-top: 2px;
    border: 1px solid #d1d1d1;
    padding: 0.5em;
}
.add-img{
    max-width: 100%;
    margin-right: 0.5em;
    width: 1.5em;
}
.sm2{
    padding: 0.55em 1em;
    background: #1b8442;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    border: none;
    -webkit-box-shadow: 0px 0px 5px 0px transparent;
    -moz-box-shadow: 0px 0px 5px 0px transparent;
    box-shadow: 0px 0px 5px 0px transparent;
    margin: 0;
}
.sm2:hover {
    border: none;
    background-color: #2a9f56;
    -webkit-box-shadow: 0px 0px 5px 0px #1b8442;
    -moz-box-shadow: 0px 0px 5px 0px #1b8442;
    box-shadow: 0px 0px 5px 0px #1b8442;
}
.sm2 span{
    font-size: 0.85em;
}
.small-box-item.border{
    border-bottom: 1px solid #aeaeae;
    padding-bottom: 0.5em;
    margin-bottom: 0.5em;
}
.stage-items select{
    width: 64%;
}
.stage-items input{
    width: 26%;

}
.stage-items select,.stage-items input{
    height: 2.9em;
    font-size: 0.9em;
    margin: 0;
}
.stage-items{
    margin-top: 3px;
}
.stage-items .button-table{
    margin: 0;
    font-size: 0.9em;
}
.modal-body .add-button{
    font-size: 0.85em;
    padding: 0.75em 1.3em;
    margin: 0;
}
.border-top{
    padding-top: 1em;
    border-top: 1px solid #aeaeae;
    margin-top: 2em;
}
.info-box-text{
    width: 49%;
}
.info-box-button{
    width: 49%;
    display: flex;
    justify-content: flex-end;
}
.info-button{
    width: 14.5em;
    font-size: 0.9em;
    margin-left: 1em;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    border: 1px solid #adadad;
    padding: 0.5em;
    cursor: pointer;
    transition: 0.5s;
    -webkit-box-shadow: 0px 0px 2px 0px transparent;
    -moz-box-shadow: 0px 0px 2px 0px transparent;
    box-shadow: 0px 0px 2px 0px transparent;
}
.info-button:hover{
    color: #1b8442;
    border-color: #1b8442;
    -webkit-box-shadow: 0px 0px 2px 0px #1b8442;
    -moz-box-shadow: 0px 0px 2px 0px #1b8442;
    box-shadow: 0px 0px 2px 0px #1b8442;
}
/* ... */

